added response header

--- a/prepros.config
+++ b/prepros.config
@@ -878,6 +878,37 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "#source/index.kit",
+        "config": {
+          "customOutput": "index.html"
+        }
+      },
+      {
+        "file": "#source/infex.kit",
+        "config": {
+          "customOutput": "infex.html"
+        }
+      },
+      {
+        "file": "#source/js/app.js",
+        "config": {
+          "autoCompile": true,
+          "customOutput": "js\\app.js",
+          "tasks": {
+            "concat-js": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
+        "file": "#source/scss/style.scss",
+        "config": {
+          "customOutput": "css\\style.css"
+        }
+      }
+    ]
   }
 }
